--- a/pyproject.toml
+++ b/pyproject.toml
@@ -116,7 +116,6 @@ ignore = [
     "D404", # First word of the docstring should not be "This"
     "D413", # Missing blank line after last section
     "UP031", # Use format specifiers instead of percent format
-    "UP006", #Use `tuple` instead of `Tuple` for type annotation
 ]
 
 [tool.ruff.lint.pydocstyle]
@@ -145,6 +144,8 @@ skip = [
     "./doc/auto_examples",
     "./doc/modules/generated"
 ]
+
+ignore-words = "ignore-words.txt"
 
 [tool.rstcheck]
 report_level = "WARNING"
