--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,10 +27,10 @@ repos:
       - id: codespell
         additional_dependencies:
           - tomli
-        args: [
-          "--ignore-words",
-          "ignore-words.txt",
-        ]
+        # args: [
+        #   "--ignore-words",
+        #   "ignore-words.txt",
+        # ]
         files: ^skada/|^docs/|^examples/
         types_or: [python, bib, rst, inc]
 
