--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -113,7 +113,7 @@ jobs:
     - name: Install 'skada' package
       run: |
         python -m pip install --user --upgrade --progress-bar off pip
-        python -m pip install --user -e .[all,test]
+        python -m pip install --user -e .[deep,test]
     # Run Tests
     - name: Run Tests with torch
       run: pytest skada/ --verbose --cov=skada --cov-report term
