--- a/.github/workflows/testing_minimal.yml
+++ b/.github/workflows/testing_minimal.yml
@@ -1,5 +1,6 @@
-name: Testing
-on: # yamllint disable-line rule:truthy
+name: Tests minimal
+
+on:
   # Allows you to run this workflow from another workflow
   workflow_call:
     inputs:
@@ -14,41 +15,51 @@ on: # yamllint disable-line rule:truthy
 permissions: {}
 
 jobs:
-  Test:
+  Test-minimal:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         python-version: ["3.13", "3.12"] #CHECK: not forget to add new version of python
-        os: [ubuntu-latest]
+        os: [macos-latest, ubuntu-latest, windows-latest]
     # name for files
     env:
       REPORT_NAME: ${{ matrix.python-version }}-os-${{ matrix.os }}
     defaults:
       run:
         shell: bash -l {0}
-    
     steps:
+
     # Install skada
     - name: Checking Out Repository
       uses: actions/checkout@v4
+    # Cache 'skada' datasets
+    - name: Create/Restore Skada Data Cache
+      id: cache-skada_datasets
+      uses: actions/cache@v4
       with:
-        ref: ${{ github.event.pull_request.head.sha || github.ref }}
+        path: ~/skada_datasets
+        key: ${{ runner.os }}-v3
     # Install Python & Packages
     - uses: actions/setup-python@v4
       with:
-        python-version: ${{ matrix.python-version }}
+        python-version: "3.10"
         cache: 'pip' # caching pip dependencies
     - run: which python
-    - name: Install 'skada' package
+    - name: Install dependencies
       run: |
         python -m pip install --user --upgrade --progress-bar off pip
-        python -m pip install --user -e .[deep,test]
+        python -m pip install --user -r requirements.txt
+        python -m pip install --user --upgrade pytest pytest-cov codecov
+    - name: Install 'skada' package
+      run: |
+        python -m pip install --user -e .
     # Run Tests
-    - name: Run Tests with torch
+    - name: Run Tests without torch
       run: pytest skada/ --verbose --cov=skada --cov-report term
-    # Codecov
+    # Codecov 
     - name: Upload coverage reports to Codecov
       uses: codecov/codecov-action@v3
       env:
         CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
